--- a/style.css
+++ b/style.css
@@ -11,7 +11,16 @@
 -cyano-escuro: #00b4d8ff;
 --cyano: #90e0efff;
 --cyano-claro: #caf0f8ff;
---fonte-titulo: font-family: "Honk", system-ui;
---fonte-texto: font-family: "Amiri Quran", serif;
+--fonte-titulo: "Honk", system-ui;
+--fonte-texto: "Amiri Quran", serif;
 }
 
+body{
+    background-color: var(--azul);
+    font-family: var(--fonte-texto);
+    font-size: 16px;
+}
+
+.titulo-principal{
+    font-family: var(--fonte-titulo);
+}
