--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@
 :root{
 --azul-escuro: #03045eff;
 --azul: #0077b6ff;
--cyano-escuro: #00b4d8ff;
+--cyano-escuro: #00b4d8ff;
 --cyano: #90e0efff;
 --cyano-claro: #caf0f8ff;
 --fonte-titulo: "Honk", system-ui;
@@ -38,8 +38,15 @@ body{
 }
 
 .cabecalho-img{
-    width: 30%;
-    justify-content: center;
-    align-items: center;
-    padding: 10px;
+    width: 10%;
+    border-radius: 100%;
 }
+
+.cabecalho-nav_link{
+    text-decoration: none;
+    font-family: var(--fonte-titulo);
+    font-size: 24%;
+    color: var(--cyano-claro);
+    margin-right: 24px;
+}
+
