--- a/style.css
+++ b/style.css
@@ -50,3 +50,9 @@ body{
     margin-right: 24px;
 }
 
+. principal-capa{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 24px;
+    background-image: url(
