--- a/style.css
+++ b/style.css
@@ -55,4 +55,4 @@ body{
     justify-content: center;
     align-items: center;
     gap: 24px;
-    background-image: url(
+    background-image: url(img/logo
