--- a/style.css
+++ b/style.css
@@ -50,9 +50,31 @@ body{
     margin-right: 24px;
 }
 
-. principal-capa{
+.principal-capa{
     display: flex;
     justify-content: center;
     align-items: center;
     gap: 24px;
-    background-image: url(img/logo
+    background-image: url(img/logosemfundo.png);
+    background-repeat: no-repeat;
+    margin-left: 12px;
+    padding: 24px 12px;
+}
+
+.principal-capa_conteudo{
+    display: flex;
+    flex-direction: column;
+    gap: 12px;
+}
+
+.principal-capa_titulo{
+    font-family: var(--texto-titulo);
+    font-size: 32px;
+    color: var(--ciano-claro);
+    margin-bottom: 12px;
+}
+
+.principal-capa_texto{
+    font-size:24px;
+    margin-top: 24px;
+}
