--- a/style.css
+++ b/style.css
@@ -63,7 +63,7 @@ body{
     align-items: center;
     gap: 24px;
     background-image: url(img/dungeon.jpg);
-    padding: 24px 12px;
+    padding: 170px 30px;
 }
 
 .principal-capa_conteudo{
@@ -80,10 +80,33 @@ body{
 }
 
 .principal-capa_texto{
-    font-size:24px;
+    font-size:32px;
+    color: var(--azul);
     margin-top: 24px;
 }
 
 .principal-capa_image{
     border-radius: 0 5% 0 5%;
+}
+
+.principal-capa_combotao{
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+}
+
+.principal-capa_botao{
+    background-color: var(--azul);
+    border-radius: 5px;
+    padding: 1em;
+    margin-top: 2em;
+    color: var(--preto);
+    text-decoration: none;
+}
+
+.botao_secunario{
+    background-color: transparent;
+    border: 2px solid var(--isabelline);
+    color: var(--azul)
+
 }
